test/field/undefined.lox
struct Foo {}
var foo = Foo()

foo.bar // error: undeclared field 'bar'
